[FIX] fixes issue on styling demo

--- a/docs/components/myscript-common-element/myscript-common-element.html
+++ b/docs/components/myscript-common-element/myscript-common-element.html
@@ -29,14 +29,14 @@ Custom property | Description | Default
 `--myscript-common-element-button-focus-background` | Buttons focus background | #1A9FFF
 `--myscript-common-element-button-disabled-background` | Buttons disabled background | #F5F6F7
 
-@demo get_started.html Get started with SHAPE
-@demo v4_configuration.html Use interactive ink api for MATH (v4)
-@demo handle_exports.html Handle exports
-@demo handle_error.html Handle error
-@demo styling.html Customize your component style
-@demo programmatic_init.html Programmatic initialization
-@demo get_stats.html Get statistics
-@demo debug.html Debug your component
+@demo demo/get_started.html Get started with SHAPE
+@demo demo/v4_configuration.html Use interactive ink api for MATH (v4)
+@demo demo/handle_exports.html Handle exports
+@demo demo/handle_error.html Handle error
+@demo demo/styling.html Customize your component style
+@demo demo/programmatic_init.html Programmatic initialization
+@demo demo/get_stats.html Get statistics
+@demo demo/debug.html Debug your component
 -->
 <dom-module id="myscript-common-element">
     <template>
