--- a/docs/components/myscript-common-element/myscript-languages-element.html
+++ b/docs/components/myscript-common-element/myscript-languages-element.html
@@ -14,7 +14,7 @@
 
 Custom property | Description | Default
 ----------------|-------------|----------
-`--myscript-languages-element-display` | Display a language selector (set to `initial` to display) | none
+`--myscript-languages-element-display` | Display a language selector (set to `block` to display) | none
 
 @demo demo/get_languages.html Get languages
 @demo demo/get_languages_programmatic.html Get languages programmatically
